reset landuse colors to greens & tune forest landuse color; more landuse filter adjustments

--- a/bubble-wrap.yaml
+++ b/bubble-wrap.yaml
@@ -6259,7 +6259,7 @@ layers:
                         - protect_class: ['2','3','5']
                 draw:
                     dots2:
-                        color: orange #[[4,[0.655,0.800,0.796]],[8,[0.588,0.780,0.773]]]
+                        color: [[4,[0.655,0.800,0.796]],[8,[0.588,0.780,0.773]]]
                         # todo: what is this?
                         order: 18
                         visible: true
@@ -6301,7 +6301,8 @@ layers:
                         - not: { protect_class: ['2','3','5'] }
                 draw:
                     dots2:
-                        color: aqua #[0.420,0.808,0.698]
+                        # effectively the wilderness color
+                        color: [[0,[0.442,0.960,0.865]],[6,[0.2,0.850,0.765]]] #red #[0.420,0.808,0.698]
                         visible: true
                 #aa_wilderness-areas:
 #                    filter: function() { return feature.name && (feature.name.indexOf("Wilderness") > -1 || feature.protect_class == '1' || feature.protect_class == '1a' || feature.protect_class == '1b' ) }
@@ -6315,29 +6316,30 @@ layers:
                     filter: { protect_class: ['6'] }
                     draw:
                         dots2:
-                            color: red #[0.442,0.960,0.865] #*green7
+                            color: [0.442,0.960,0.865] #*green7
                             visible: true
 
-                    national_park:
-                        filter: { kind: national_park }
-                        draw:
-                            dots2:
-                                color: pink
-
+                    # these are mistagged in OSM, but they're really just national forests
+                    #national_park:
+                    #    filter: { kind: national_park }
+                    #    draw:
+                    #        dots2:
+                    #            color: pink
+#
                 #ab_protected_area:
 #                    filter: { kind: protected_area }
 #                    draw:
 #                        dots2:
 #                            color: chartreuse
 #                            visible: true
-
-                a_nature_reserve:
-                    filter: { kind: nature_reserve }
-                    draw:
-                        dots2:
-                            color: darkblue
-                            visible: true
-
+#
+                #a_nature_reserve:
+#                    filter: { kind: nature_reserve }
+#                    draw:
+#                        dots2:
+#                            color: darkblue
+#                            visible: true
+#
             # gotta be a protected area to draw green, not just a landcover type
             farm:
                 filter:
@@ -6363,16 +6365,16 @@ layers:
                         $zoom: { min: 10 }
                     draw:
                         dots2:
-                            color: yellow #[0.486,0.839,0.722]
+                            color: [0.70,0.990,0.92] #[0.486,0.839,0.722]
                             visible: true
 
-                    z-others:
-                        filter: { kind: [natural_forest, natural_wood, natural_park] }
-                        draw:
-                            dots2:
-                                color: gold
-                                visible: true
-
+                    #z-others:
+#                        filter: { kind: [natural_forest, natural_wood, natural_park] }
+#                        draw:
+#                            dots2:
+#                                color: gold
+#                                visible: true
+#
 #            nature_reserve:
 #                filter: { kind: nature_reserve, $zoom: { min: 7 } }
 #                draw:
@@ -6399,7 +6401,7 @@ layers:
                 draw:
                     dots2:
                         # color: [[4,[0.655,0.800,0.796]],[11,[0.588,0.780,0.773]],[12,[0.242,0.737,0.712]],[14,[0.412,0.733,0.718]],[15,[0.635,0.792,0.788]]]
-                        color: greenyellow   #[[4,[0.655,0.800,0.796]],[11,[0.588,0.780,0.773]],[12,[0.635,0.792,0.788]]]
+                        color: [[4,[0.655,0.800,0.796]],[11,[0.588,0.780,0.773]],[12,[0.635,0.792,0.788]]]
                         visible: true
                 #forest:
 #                    filter: { kind: forest }
@@ -6414,7 +6416,7 @@ layers:
                             - not: [ protect_class: ['2','3','5','6'], operator: [ "United States National Park Service"] ]
                     draw:
                         dots2:
-                            color: olivedrab
+                            color: [[4,[0.525,0.765,0.686]],[9,[0.416,0.737,0.631]]]
             urban:
                 filter: { kind: [urban, rural, residential] }
                 visible: global.earth2_v
