--- a/layers/transit-overlay.yaml
+++ b/layers/transit-overlay.yaml
@@ -1,15 +1,16 @@
 import:
-    - layers/globals.yaml
-    - layers/textures.yaml
+    - globals.yaml
+    - textures.yaml
 
 layers:
     transit-rail-lines:
-        data: { source: osm, layer: transit }
+        data: { source: mapzen, layer: transit }
         filter:
             not: { kind: [platform, railway] }
         draw:
             lines:
                 order: 499
+                visible: global.sdk_transit_overlay
                 color: purple
                 width: [[5,1.5px],[6,2px],[11,3px],[18,4px]]
                 interactive: true
@@ -95,6 +96,7 @@ layers:
             filter: { $zoom: [13,14], ref: true }
             draw:
                 text:
+                    visible: global.sdk_transit_overlay
                     priority: 20
                     text_source: function() { if( feature.ref.length < 4 ) { return feature.ref; } else { return ''; } }
                     font:
@@ -106,6 +108,7 @@ layers:
             filter: { $zoom: { min: 15 } }
             draw:
                 text:
+                    visible: global.sdk_transit_overlay
                     priority: 20
                     text_source: ref
                     font:
@@ -121,22 +124,23 @@ layers:
                         font:
                             stroke: { color: white, width: 3px }
 
-    transit-bus-roads:
-        data: { source: osm, layer: roads }
-        filter: { is_bus_route: true }
-        draw:
-            lines:
-                interactive: false
-                color: [[13,[0,0,1,0.5]],[15,blue]]
-                width: [[11,0.5px],[12,0.8px],[16,1.25px],[18,1m]]
-                # let roads sort themselves past zoom 14
-                order: 488
-                # but give them all the same outline
-                outline:
-                    order: 487
+#    transit-bus-roads:
+#        data: { source: mapzen, layer: roads }
+#        filter: { is_bus_route: true }
+#        draw:
+#            lines:
+#                visible: global.sdk_transit_overlay
+#                interactive: false
+#                color: [[13,[0,0,1,0.5]],[15,blue]]
+#                width: [[11,0.5px],[12,0.8px],[16,1.25px],[18,1m]]
+#                # let roads sort themselves past zoom 14
+#                order: 488
+#                # but give them all the same outline
+#                outline:
+#                    order: 487
 
     transit-station-labels:
-        data: { source: osm, layer: [pois,landuse] }
+        data: { source: mapzen, layer: [pois,landuse] }
         filter:
             kind: [station, tram_stop, bus_station, subway_entrance, halt, stop, platform, bus_stop, stop_position ]
             any:
@@ -148,33 +152,34 @@ layers:
                       - kind: true
         draw:
             icons:
+                visible: global.sdk_transit_overlay
                 size: [[13, 12px], [16, 16px], [19, 20px]]
                 interactive: true
                 priority: 15
-            text-blend-order:
-                move_into_tile: false # preserves text alignment w/icons in JS
-                anchor: bottom
-                offset: [[13, [0, 6px]], [16, [0, 8px]], [19, [0, 10px]]] # offset tracks alongside icon size (half icon height)
-                interactive: true
-                priority: 16
-                font:
-                    weight: 500
-                    fill: black
-                    weight: 400
-                    size: 11px
-                    stroke: { color: white, width: 3 }
+                text:
+                    move_into_tile: false # preserves text alignment w/icons in JS
+                    anchor: bottom
+                    offset: [[13, [0, 6px]], [16, [0, 8px]], [19, [0, 10px]]] # offset tracks alongside icon size (half icon height)
+                    interactive: true
+                    priority: 16
+                    font:
+                        weight: 500
+                        fill: black
+                        weight: 400
+                        size: 11px
+                        stroke: { color: white, width: 3 }
         poi_labels-z14:
             filter: { $zoom: [14] }
-            draw: { text-blend-order: { font: { size: 11px } } }
+            draw: { icons: { text: { font: { size: 11px } } } }
         poi_labels-z15:
             filter: { $zoom: [15,16,17] }
-            draw: { text-blend-order: { font: { size: 12px, stroke: { width: 2 } } } }
+            draw: { icons: { text: { font: { size: 12px, stroke: { width: 2 } } } } }
         poi_labels-z18:
             filter: { $zoom: [18,19] }
-            draw: { text-blend-order: { font: { size: 12px, weight: 600, stroke: { width: 3 } } } }
+            draw: { icons: { text: { font: { size: 12px, weight: 600, stroke: { width: 3 } } } } }
         poi_labels-z20-up:
             filter: { $zoom: { min: 20 } }
-            draw: { text-blend-order: { font: { size: 14px, weight: 600, stroke: { width: 3 }  } } }
+            draw: { icons: { text: { font: { size: 14px, weight: 600, stroke: { width: 3 }  } } } }
         station-train-subway:
             filter: { kind: [station, train-station, train_station] } #, $zoom: { min: 13 }
             draw:
@@ -182,15 +187,16 @@ layers:
                     sprite: train-station
                     size: [[13, 12px], [14, 14px], [15, 16px], [17, 20px]]
                     priority: 11
-                text-blend-order:
-                    offset: [[13, [0, 6px]], [14, [0, 7px]],[15, [0, 8px]], [17, [0, 10px]]]
-                    priority: 12
+                    text:
+                        offset: [[13, [0, 6px]], [14, [0, 7px]],[15, [0, 8px]], [17, [0, 10px]]]
+                        priority: 12
             low-priority-early:
                 filter: { kind_tile_rank: { min: 3 }, $zoom: { min: 0, max: 12 } }
                 draw:
                     icons:
                         size: [[12, 5px], [14, 6px], [15, 16px]]
-                    text-blend-order: { visible: false }
+                        text:
+                            visible: false
                 long-tail:
                     filter: { kind_tile_rank: { min: 10 }, $zoom: [10] }
                     draw:
@@ -202,7 +208,8 @@ layers:
                     icons:
 #                        visible: false
                         size: [[12, 5px], [14, 6px], [15, 16px]]
-                    text-blend-order: { visible: false }
+                        text:
+                            visible: false
             low-priority-early-z13:
                 filter: { kind_tile_rank: { min: 8 }, $zoom: [13] }
                 draw:
@@ -216,21 +223,23 @@ layers:
                     icons:
                         size: [[12, 10px], [14, 11px], [15, 16px]]
                         #visible: false
-                    text-blend-order: { visible: false }
+                        text:
+                            visible: false
             late:
                 filter: { $zoom: { min: 16 } }
                 draw:
-                    text-blend-order:
-                        font:
-                            weight: 600
-                            size: 12px
+                    icons:
+                        text:
+                            font:
+                                weight: 600
+                                size: 12px
         subway-early:
             filter: { is_subway: true, is_train: false, $zoom: { max: 12 } }
             draw:
                 icons:
                     visible: false
-                text-blend-order:
-                    visible: false
+                    text:
+                        visible: false
         halt-early:
             filter: { kind: [halt,stop], $zoom: { max: 15 } }
             draw:
@@ -238,8 +247,8 @@ layers:
                     size: [[15, 8px], [16, 18px]]
                     visible: true
                     sprite: light-rail
-                text-blend-order:
-                    visible: false
+                    text:
+                        visible: false
         platform-early:
             filter: { kind: [platform] }
             draw:
@@ -247,8 +256,8 @@ layers:
                     size: [[15, 8px], [16, 18px]]
                     visible: true
                     sprite: generic
-                text-blend-order:
-                    visible: false
+                    text:
+                        visible: false
         tram-stop-early:
             filter: { kind: [tram_stop], $zoom: { max: 16 } }
             draw:
@@ -256,16 +265,16 @@ layers:
                     size: [[13, 0px], [14, 7px], [15, 8px]]
                     visible: true
                     sprite: light-rail
-                text-blend-order:
-                    visible: false
+                    text:
+                        visible: false
         tram-stop:
             filter: { kind: tram_stop, $zoom: { min: 16 } }
             draw:
                 icons:
                     size: [[16, 12px], [17, 14px], [18, 18px]]
                     sprite: light-rail
-                text-blend-order:
-                    offset: [[13, [0, 6px]], [16, [0, 9px]]]
+                    text:
+                        offset: [[13, [0, 6px]], [16, [0, 9px]]]
         bus-like-labels:
             filter:
                 kind: [platform, stop_position]
@@ -273,12 +282,12 @@ layers:
                 icons:
                     size: [[13, 8px], [16, 10px], [17, 12px], [18, 18px]]
                     sprite: bus-station
-                text-blend-order:
-                    interactive: true
-                    font:
-                        fill: black
-                        size: 12px
-                        stroke: { color: white, width: 4 }
+                    text:
+                        interactive: true
+                        font:
+                            fill: black
+                            size: 12px
+                            stroke: { color: white, width: 4 }
         bus-station-labels:
             filter:
                 kind: [bus_station, bus_stop]
@@ -288,13 +297,13 @@ layers:
                     size: [[13, 12px], [16, 18px]]
                     sprite: bus-station
                     priority: 17
-                text-blend-order:
-                    interactive: true
-                    priority: 18
-                    font:
-                        fill: black
-                        size: 12px
-                        stroke: { color: white, width: 4 }
+                    text:
+                        interactive: true
+                        priority: 18
+                        font:
+                            fill: black
+                            size: 12px
+                            stroke: { color: white, width: 4 }
             bus_stop:
                 filter:
                     kind: [bus_stop]
@@ -302,8 +311,8 @@ layers:
                 draw:
                     icons:
                         size: [[13, 8px], [19, 18px]]
-                    text-blend-order:
-                        visible: false
+                        text:
+                            visible: false
         subway-entrance:
             filter:
                 kind: [subway_entrance]
@@ -312,27 +321,29 @@ layers:
                     sprite: subway-entrance
                     size: [[17, 12px], [19, 14px]]
                     priority: 19
-                text-blend-order:
-                    offset: [[17, [0, 6px]], [19, [0, 7px]]] # offset tracks alongside icon size (half icon height)
-                    priority: 20
-                    interactive: true
-                    text_source: function() { if( feature.ref || feature.name ) { if( feature.ref && feature.name ) { return '[' + feature.ref + ']\n' + feature.name; } else { return feature.name; } } else { return "Entrance"; } }
-                    font:
-                        fill: black
-                        size: 12px
-                        stroke: { color: white, width: 4 }
+                    text:
+                        offset: [[17, [0, 6px]], [19, [0, 7px]]] # offset tracks alongside icon size (half icon height)
+                        priority: 20
+                        interactive: true
+                        text_source: function() { if( feature.ref || feature.name ) { if( feature.ref && feature.name ) { return '[' + feature.ref + ']\n' + feature.name; } else { return feature.name; } } else { return "Entrance"; } }
+                        font:
+                            fill: black
+                            size: 12px
+                            stroke: { color: white, width: 4 }
 
     transit-station-buildings:
-        data: { source: osm, layer: [buildings] }
+        data: { source: mapzen, layer: [buildings] }
         filter:
             any:
                 - landuse_kind: [station]
         draw:
             polygons:
+                visible: global.sdk_transit_overlay
                 color: '#bdadbf'
                 order: 500
                 #extrude: function() { return feature.height || 20; }
             outline:
+                visible: global.sdk_transit_overlay
                 style: lines
                 order: 501
                 color: '#d534df'
@@ -340,16 +351,18 @@ layers:
                 #extrude: function() { return feature.height || 20; }
 
     transit-platforms:
-        data: { source: osm, layer: transit }
+        data: { source: mapzen, layer: transit }
         filter: { kind: platform, $zoom: { min: 15 }, $geometry: [polygon,line] }
         draw:
             lines:
+                visible: global.sdk_transit_overlay
                 color: '#bc8f96'
                 width: 10m          # something fishy here with the #include syntax in v0.7 tangram?
                 order: 1000         # this selection should sort above basemap, but grey Zinc color still applies
                 outline:
                     order: 1002
             polygons:
+                visible: global.sdk_transit_overlay
                 order: 1001
         polygon_geom:
             filter: { $geometry: polygon }
@@ -363,10 +376,11 @@ layers:
                     visible: false
 
     transit-basemap-railway-late:
-        data: { source: osm, layer: roads }
+        data: { source: mapzen, layer: roads }
         filter: { kind: rail, $zoom: { min: 16 }, not: { railway: [subway,light_rail,tram] } }
         draw:
             lines:
+                visible: global.sdk_transit_overlay
                 interactive: true
                 color: black
                 width: [[15,0.5px],[16,0.75px],[18,1m]]
