adjust outline sizes & colour, remove double platforms, reduce crowding of labels with buffer & etc

--- a/bubble-wrap.yaml
+++ b/bubble-wrap.yaml
@@ -2666,6 +2666,7 @@ layers:
                     priority: 5
                     text:
                         interactive: true
+                        buffer: 4px
 
             populated-places-natural-earth-z2:
                 filter: { name: true, source: naturalearthdata.com, $zoom: [2], scalerank: 0 }
