--- a/bubble-wrap.yaml
+++ b/bubble-wrap.yaml
@@ -535,20 +535,20 @@ textures:
 
 fonts:
     Open Sans:
-        - weight: 300
-          url: fonts/open sans-300normal.ttf
-        - weight: normal
-          url: fonts/open sans-400normal.ttf
-        - weight: normal
+        - weight: 300 # Light
+          url: fonts/OpenSans-Light.woff
+        - weight: normal # Regular
+          url: fonts/OpenSans-Regular.woff
+        - weight: normal # Regular
           style: italic
-          url: fonts/open sans-400italic.ttf
-        - weight: 600
-          url: fonts/open sans-600normal.ttf
-        - weight: 600
+          url: fonts/OpenSans-Italic.woff
+        - weight: 600 # Semi Bold
+          url: fonts/OpenSans-Semibold.woff
+        - weight: 600 # Semi Bold
           style: italic
-          url: fonts/open sans-600italic.ttf
+          url: fonts/OpenSans-SemiboldItalic.woff
         - weight: bold
-          url: fonts/open sans-700normal.ttf
+          url: fonts/OpenSans-Bold.woff
 
 sources:
     mapzen:
