--- a/bubble-wrap.yaml
+++ b/bubble-wrap.yaml
@@ -535,13 +535,11 @@ textures:
 
 sources:
     mapzen:
-        # EraserMaps the app only supports MVT format tiles
-        type:  MVT #TopoJSONTiles topojson
-        #url:  http://vector.dev.mapzen.com/osm/all/{z}/{x}/{y}.mvt
-        #enforce_winding: true  #because Tangram v0.4 and tiles v0.5-pre don't play nice
-        #url:  //localhost:8080/osm/all/{z}/{x}/{y}.mvt
-        url:  https://vector.mapzen.com/osm/all/{z}/{x}/{y}.mvt?api_key=vector-tiles-P6dkVl4
-        # road labels in Tangram JS are broken when overzooming, set max_zoom: 18 to preview fix
+        type: MVT
+        url: https://vector.mapzen.com/osm/all/{z}/{x}/{y}.mvt
+        # url: http://vector.dev.mapzen.com/osm/all/{z}/{x}/{y}.mvt
+        url_params:
+            api_key: vector-tiles-P6dkVl4
         max_zoom: 16
 
 #    # Only enable this for local debug, should not be enabled for prod (app inserts these at runtime)
